<package>
  <name>cram_bullet_reasoning_belief_state</name>
  <version>0.2.1</version>
  <description>

     cram_bullet_reasoning_belief_state

  </description>
  <author>Lorenz Moesenlechner</author>
  <maintainer email="musterman@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/cram_bullet_reasoning_belief_state</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cram_prolog</build_depend>
  <build_depend>cram_utilities</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>cram_projection</build_depend>
  <build_depend>cram_bullet_reasoning</build_depend>
  <build_depend>cram_plan_occasions_events</build_depend>
  <build_depend>cram_occasions_events</build_depend>
  <build_depend>cram_language</build_depend>
  <build_depend>cram_plan_library</build_depend>
  <build_depend>cram_physics_utils</build_depend>
  <build_depend>roslisp_utilities</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>cram_utilities</build_depend>
  <build_depend>cl_tf2</build_depend>
  <build_depend>cram_robot_interfaces</build_depend>
  <build_depend>cram_transforms_stamped</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>cram_prolog</run_depend>
  <run_depend>cram_utilities</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>cram_projection</run_depend>
  <run_depend>cram_bullet_reasoning</run_depend>
  <run_depend>cram_plan_occasions_events</run_depend>
  <run_depend>cram_occasions_events</run_depend>
  <run_depend>cram_language</run_depend>
  <run_depend>cram_plan_library</run_depend>
  <run_depend>cram_physics_utils</run_depend>
  <run_depend>roslisp_utilities</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>cram_utilities</run_depend>
  <run_depend>cl_tf2</run_depend>
  <run_depend>cram_robot_interfaces</run_depend>
  <run_depend>cram_transforms_stamped</run_depend>

</package>


